Fix property info icon overlapping property label

--- a/src/Umbraco.Web.UI.Client/src/views/components/umb-property-info-button/umb-property-info-button.less
+++ b/src/Umbraco.Web.UI.Client/src/views/components/umb-property-info-button/umb-property-info-button.less
@@ -4,7 +4,7 @@ umb-property-info-button {
     vertical-align: text-bottom;
 
     .control-label + & {
-        margin-left: -8px;
+        margin-left: 3px;
     }
 
     > .__button {
